mash/02-mash-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mash
  name: mash-service
  namespace: mash
spec:
  ports:
  - name: "web"
    port: 80
  selector:
    app: mash
